# CoronaEditor

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build.py  requirements.txt
Backend/: CoronaEngineFallback.py  main.py  mcp_client.py  transform_server.py
Backend/ApplicationScripts/Actors/: buff.py  weapon.py
Backend/ApplicationScripts/Models/: BaseActor.py
Backend/ApplicationScripts/Pools/: resource_pool.py
Backend/ApplicationScripts/Tables/: Skill.xlsx  Weapon.xlsx
Backend/ApplicationScripts/Tools/: game_setting.py  loggings.py  settings.py
Backend/ApplicationScripts/UI/MainLogic/InsidePage/main/: test1_inside_ui_2.py
Backend/ApplicationScripts/UI/MainLogic/InsidePage/menu/: inside_menu.py
Backend/ApplicationScripts/UI/MainLogic/InsidePage/menu/clue_ui/: clue_ui.py
Backend/LargeLanguageModel/: web_search.py  workbench_mcp_agent.py
Backend/ui/: DockWidget.py  MainWindow.py  RenderWidget.py  地板网格.blend  场景三轴.blend
Backend/utils/: Bridge.py  FileHandleComponent.py  StaticComponents.py
ExternalEnvironment/scripts/: SnapshotManager.py  extutils.py  npm_build.py  pip_install.py  sync_res.py
Frontend/: index.html  vite.config.js
Frontend/src/: main.js
Frontend/src/assets/: welcome-page.css  welcome-pagePE.css
Frontend/src/blockly/blocks/: detect.js  list.js
Frontend/src/blockly/configs/: categoryMap.js
Frontend/src/blockly/generators/: appearance.js  control.js  detect.js  engine.js  event.js  list.js  math.js  variable.js
Frontend/src/composables/: useDragResize.js
Frontend/src/utils/: eventBus.js
Frontend/src/views/: AITalkBar.vue  Object.vue  SceneBar.vue  SetUp.vue  WelcomePage.vue
SourceCode/: EngineActorScripts.cpp  EngineSceneScripts.cpp  EngineScripts.h  PythonAPI.cpp  PythonAPI.h  main.cpp
SourceCode/CabbageEditorBackend/: CabbageEngineFallback.py  QtWindow.py  StaticComponents.py  View.py  generate_files.py  main.py  mcp_client.py  transform_server.py
SourceCode/CabbageEditorBackend/ApplicationScripts/: README.md  gameEngine.py
SourceCode/CabbageEditorBackend/ApplicationScripts/Actors/: cards.py  hero.py  magic.py  player.py  skill.py
SourceCode/CabbageEditorBackend/ApplicationScripts/Models/: BaseEnum.py  BaseImport.py
SourceCode/CabbageEditorBackend/ApplicationScripts/Pools/: game_pool.py
SourceCode/CabbageEditorBackend/ApplicationScripts/Saves/: save1.save
SourceCode/CabbageEditorBackend/ApplicationScripts/Tables/: Buff.xlsx  Hero.xlsx  Magic.xlsx
SourceCode/CabbageEditorBackend/ApplicationScripts/Tools/: read_excel.py  save_and_load.py
SourceCode/CabbageEditorBackend/ApplicationScripts/UI/: UI_all_init.py  UI_collection.py  UI_main.py  test_video.py
SourceCode/CabbageEditorBackend/ApplicationScripts/UI/MainLogic/InsidePage/item_view/: item_view_ui.py
SourceCode/CabbageEditorBackend/ApplicationScripts/UI/MainLogic/InsidePage/main/: inside_ui.py  inside_ui_2.py
SourceCode/CabbageEditorBackend/ApplicationScripts/UI/MainLogic/InsidePage/menu/: exit.py  test1_inside_menu.py
SourceCode/CabbageEditorBackend/ApplicationScripts/UI/MainLogic/InsidePage/menu/item_ui/: item_ui.py
SourceCode/CabbageEditorBackend/ApplicationScripts/UI/MainLogic/InsidePage/menu/task_ui/: task_ui.py
SourceCode/CabbageEditorBackend/ApplicationScripts/UI/MainLogic/OutsidePage/main/: outside_ui.py
SourceCode/CabbageEditorBackend/ApplicationScripts/UI/MainLogic/OutsidePage/setting/: setting_ui.py
SourceCode/CabbageEditorBackend/LargeLanguageModel/: agent.py  autogen_mcp.py  old_mcp_client.py  two_agent_communicate.py
SourceCode/CabbageEditorBackend/ui/: BrowserWidget.py  CustomWindow.py  DockWidget.py  MainWindow.py  RenderWidget.py  View.py
SourceCode/CabbageEditorBackend/utils/: Bridge.py  CentealManager.py  StaticComponents.py
SourceCode/CabbageEditorFrontend/: package.json  vite.config.js
SourceCode/CabbageEditorFrontend/src/assets/: welcome-page.css  welcome-pagePE.css
SourceCode/CabbageEditorFrontend/src/blockly/blocks/: appearance.js  control.js  detect.js  engine.js  event.js  math.js  variable.js
SourceCode/CabbageEditorFrontend/src/blockly/configs/: toolboxConfig.js  workspaceConfig.js
SourceCode/CabbageEditorFrontend/src/blockly/generators/: appearance.js  control.js  detect.js  event.js  list.js  variable.js
SourceCode/CabbageEditorFrontend/src/composables/: useDragResize.js
SourceCode/CabbageEditorFrontend/src/router/: index.js
SourceCode/CabbageEditorFrontend/src/views/: AITalkBar.vue  AITalkBarPE.vue  MainPage.vue  MainPagePE.vue  Object.vue  ObjectPE.vue  Pet.vue  PetPE.vue  SceneBar.vue  SceneBarPe.vue  SetUp.vue  WelcomePage.vue  WelcomePagePE.vue
